-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
None
-
3
-
9223372036854775807
When files are encrypted in Lustre using fscrypt, they should normally not be accessible to users without the proper encryption key. However, if a user has the encryption key loaded when they read a file, it may be decrypted in memory and saved to the PCC device in unencrypted form.
For now we should just disable PCC caching of encrypted files.