lustre/llite/file.c
@@ -3680,6 +3680,9 @@ static long ll_file_unlock_lease(struct file *file, struct ll_ioc_lease *ioc,
 		if (ioc->lil_count != 1)
 			RETURN(-EINVAL);
 
+		if (IS_ENCRYPTED(inode))
+			RETURN(-EOPNOTSUPP);
+
 		arg += sizeof(*ioc);
 		if (copy_from_user(&param.pa_archive_id, (void __user *)arg,
 				   sizeof(__u32)))
